--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <div id="my" class="presentation" style="width: 1366px; height: 660px;">
+    <div id="my" class="presentation" style="width: 100%; height: 660px;">
         <div class="wrap-info" id="slide1">
             <div class="state">21<span class="percentage">%</span></div>
             <h2 class="title">Lorem ipsum dolor</h2>
@@ -31,7 +31,7 @@
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
            
         </div>
-        <canvas id="pie1" width="1366" height="660"></canvas>
+        <canvas id="pie1" width="600" height="300"></canvas>
         <canvas id="pie2" width="600" height="500"></canvas>
         <canvas id="pie3" width="600" height="500"></canvas>
     </div>
@@ -46,6 +46,7 @@
     <div id="editor"></div>
     <script  src="https://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
+    <script src="js/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js" integrity="sha384-THVO/sM0mFD9h7dfSndI6TS0PgAGavwKvB5hAxRRvc0o9cPLohB0wb/PTA7LdUHs" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
