--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
         <p class="vertical-text text2">s&p 500</p>
         <p class="vertical-text text3">sensex</p>
         <div class="controls">
+            <span class="btn-wrapper">
                 <a class="prev"><i class="icon ion-ios-arrow-round-back"></i></a>
                 <!-- <a class="next"><img src="img/next.png" /></a>  -->
                 <a class="next"><i class="icon ion-ios-arrow-round-forward"></i></a> 
-                <a id="download" class="pdf">PDF</a>
-                <!-- <button id="download">download</button>                -->
-            </div>
+            </span>
+            <a id="download" class="pdf">PDF</a>
+            <!-- <button id="download">download</button>                -->
+        </div>
         
         <canvas id="pie1" width="400" height="300"></canvas>
         <canvas id="pie1_1" width="400" height="300"></canvas>
